@startuml
!include ../style.puml
skinparam arrowThickness 1.1
skinparam classAttributeIconSize 0
hide circle

class CommandHelper LOGIC_COLOR {
  + {static} findSkuOrError(skuList: SKUList, skuId: String): SKU
  + {static} parseLocation(locationStr: String): Location
  + {static} parsePriority(priorityStr: String): Priority
  + {static} parsePriorityOrDefault(cmd: ParsedCommand): Priority
  + {static} parseIndex(indexStr: String): int
  + {static} matchesDescription(task: SKUTask, descFilter: String): boolean
}

class SKUList MODEL_COLOR {
  + findByID(skuID: String): SKU
}

class SKU MODEL_COLOR_T1 {
  - skuID: String
}

class Ui UI_COLOR {
  + {static} printError(msg: String): void
}

CommandHelper ..> SKUList : uses
CommandHelper ..> SKU : returns
CommandHelper ..> Ui : uses
@enduml
